# strenth-web-testing

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  BOM_Parser.py  CLAUDE.md  Digikey_fetch.py  Dockerfile  Email_Sender.py  Mouser_fetch.py  README.md  alembic.ini  alt_component.py  api-update.yaml  app_helpers.py  arrow_fetch.py  azure-deploy.example.ps1  celery_worker.py  chat_agent.py  cost_benchmarking_pipeline.py  credentials.example.json  custom_duty.py  cybex_lookup.py  database.py  docker-compose.postgres.yml  docker-compose.yml  element14_fetch.py  eol_fetch.py  flask-update.yaml  frontend_bridge.py  gmail_parser.py  hsn_lookup.py  index.html  indian_stores_fetch.py  lcsc_fetch.py  main.py  nginx.conf  package-lock.json  package.json  (+12 more)
.azure/: deployment-plan.md
.github/: CODEOWNERS
.github/workflows/: azure-static-web-apps-kind-plant-08187be10.yml  deploy.yml
.vercel/: project.json
src/: App.tsx  auth.ts  index.css  types.ts
src/api/: bom.ts  chat.ts  client.ts  pricing.ts  rfq.ts  types.ts
src/components/: AIScoringViewer.tsx  AdminPage.tsx  BomProgressPanel.tsx  BomViewer.tsx  CadSvg.tsx  ChatPanel.tsx  CmRFQViewer.tsx  CostBenchmarkViewer.tsx  CostProgressPanel.tsx  DFMProgressPanel.tsx  DFMViewer.tsx  FactoryEngageViewer.tsx  FileViewer.tsx  Icons.tsx  LoginPage.tsx  ManufacturingProgressPanel.tsx  ManufacturingViewer.tsx  MfgOrderPreview.tsx  MfgVendorList.tsx  NegotiationMasterPanel.tsx  PaymentModal.tsx  PaymentSuccess.tsx  ProgressPanel.tsx  QuotesViewer.tsx  RFQTracker.tsx  RFQViewer.tsx  SchematicAgentViewer.tsx  (+3 more)
(+13 files in other folders)
